# KnowledgeGraphHER2

./: .env.example  .gitignore  .tmp_test_neo4j.py  Dockerfile  README.md  conftest.py  demo_agents.py  docker-compose.yml  implementation_plan.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: api.py  cli.py  streamlit_app.py
docs/: annex_guidelines.md  annex_ontology.md  apendice_estado_del_arte_2025.md  apendice_frameworks_graphrag.md  apendice_langchain_langgraph.md  her2_kg_pipeline_guide.md
output/: checkpoints.db  her2_knowledge_graph.ttl  her2_knowledge_graph_20260417_123536.ttl  her2_knowledge_graph_20260417_195757.jsonld  her2_knowledge_graph_20260417_195757.ttl  her2_knowledge_graph_20260421_185705.jsonld  her2_knowledge_graph_20260421_185735.jsonld  her2_knowledge_graph_20260421_185735.ttl  output.rar  pipeline_log.json  pipeline_log_20260417_123536.json  pipeline_log_20260417_195757.json
scripts/: check_mentions.py  compute_embeddings.py  export_and_sync_aura.py  patch_mentions.py  recreate_indexes.py  test_retrieval.py  test_routing.py
src/: __init__.py
src/agents/: __init__.py  diagnostic_agent.py  evidence_agent.py  explanation_agent.py  state.py  supervisor.py  tools.py  validation_agent.py
src/domain/: __init__.py  algorithm_definitions.py  models.py  ontology.py  validation_rules.py
src/extraction/: __init__.py  algorithm_parser.py  entity_extractor.py  resolution.py
tests/: test_agents.py  test_api.py  test_domain.py  test_extraction.py  test_ingestion.py  test_integration.py  test_resolution.py
(+16 files in other folders)
